# FileExchanger

./: CMakeLists.txt  README.md  readme.txt  tips.txt
src/: Broker.cpp  CMakeLists.txt  Client.cpp  MainBroker.cpp  MainClient.cpp  SocketWrapper.cpp  main.cpp
src/include/: Broker.h  Client.h  ConstVariables.h  DataBase.h  DirManagment.h  FileWait.h  Message.h  SocketWrapper.h  inc.h
src/modules/client/include/: ClientConnection.h  ClientMenu.h  FileTransfer.h
src/modules/client/src/: ClientConnection.cpp  ClientMenu.cpp  FileTransfer.cpp
src/modules/common/include/: FileTransfer.h
src/modules/common/src/: FileTransfer.cpp
tests/: CMakeLists.txt  test.cpp
